# lycam

./: .dir-locals.el  .gitignore  CMakeLists.txt  XCG-CSeries_v_1_1_0.xml
src/: CMakeLists.txt  boolean.h  command.cpp  command.h  converter.cpp  converter.h  discover_test.cpp  enumentry.cpp  enumentry.h  enumeration.cpp  enumeration.h  feature_test.cpp  floatjgv.cpp  floatjgv.h  floatreg.cpp  formula.cpp  genicamxmlparser.cpp  genicamxmlparser.h  gvcp.h  gvcpclient.cpp  gvcpclient.h  gvdevice.cpp  gvdevice.h  ienumeration.h  integer.cpp  intreg.cpp  intreg.h  intswissknife.cpp  iregister.h  istring.h  logger.cpp  logger.h  maskedintreg.cpp  node.cpp  node.h  nodemap.cpp  readmemhelper.cpp  readreghelper.cpp  stringreg.cpp  swissknife.cpp  (+4 more)
src/common/: logger.cpp  logger.h
src/genicam/: CMakeLists.txt  boolean.cpp  boolean.h  category.h  converter.cpp  converter.h  enumentry.cpp  enumentry.h  enumeration.cpp  enumeration.h  floatjgv.cpp  floatjgv.h  floatreg.cpp  floatreg.h  formula.cpp  formula.h  genicamxmlparser.cpp  genicamxmlparser.h  iboolean.h  icategory.h  icommand.h  ienumeration.h  ifloat.h  iinteger.h  iinterface.h  inode.h  integer.cpp  integer.h  intreg.cpp  intreg.h  intswissknife.cpp  intswissknife.h  iport.h  istring.h  maskedintreg.cpp  maskedintreg.h  node.cpp  node.h  nodemap.cpp  nodemap.h  (+11 more)
src/gvcp/: CMakeLists.txt  bootstrapregisters.cpp  bootstrapregisters.h  discoveryhelper.cpp  forceiphelper.cpp  gvcpclient.cpp  gvcpclient.h  gvdevice.cpp  headerhelper.cpp  headerhelper.h  readmemhelper.h  writememhelper.cpp  writememhelper.h  writereghelper.cpp
src/gvsp/: CMakeLists.txt  gvsp.h  gvspblock.cpp  gvspblock.h  gvspdevices.h  gvspmemoryallocator.cpp  gvspmemoryallocator.h  gvsppacket.cpp  gvsppacket.h  gvspreceiver.cpp  gvspreceiver.h  gvspreceiver_p.h  timestampdate.cpp  timestampdate.h  timestampdate_p.h
src/util/: CMakeLists.txt  logger.cpp
test/: CMakeLists.txt  listInterface.cpp
test/genicam/: driver.cpp
